--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,9 +9,9 @@ homepage = "https://geogif.readthedocs.io/en/latest/index.html"
 
 [tool.poetry.dependencies]
 python = "^3.8"
-dask = {extras = ["delayed"], version = "^2021.4.1"}
+dask = {extras = ["delayed"], version = ">= 2021.4.1, < 2023"}
 numpy = "^1.20.2"
-Pillow = "^8.2.0"
+Pillow = "^9.0.0"
 matplotlib = "^3.4.1"
 xarray = ">=0.18,<1"
 pytest = {version = "^6.2.3", optional = true}
@@ -23,7 +23,7 @@ pandoc = {version = "^1.0.2", optional = true}
 nbsphinx = {version = "^0.8.4", optional = true}
 sphinx-autodoc-typehints = {version = "^1.12.0", optional = true}
 coiled = {version = "^0", optional = true}
-distributed = {version = "^2021.4.1", optional = true}
+distributed = {version = ">= 2021.4.1, < 2023", optional = true}
 pystac-client = {version = "^0", optional = true}
 furo = {version = "^2021.4.11-beta.34", optional = true}
 stackstac = {version = "^0", optional = true}
